[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://GameRoom/GameRoom.gd" type="Script" id=2]

[node name="Game_room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_button" type="Button" parent="."]
margin_left = 74.9865
margin_top = 169.97
margin_right = 267.986
margin_bottom = 299.97
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready_button" type="Button" parent="."]
visible = false
margin_left = 185.965
margin_top = 324.728
margin_right = 522.965
margin_bottom = 502.728
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave_button" type="Button" parent="."]
margin_left = 77.0
margin_top = 340.0
margin_right = 273.0
margin_bottom = 465.0
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_list" type="Control" parent="."]
anchor_left = 0.314583
anchor_top = 0.266667
anchor_right = 0.939583
anchor_bottom = 0.822222
margin_left = -3.99939
margin_top = 1.99963
margin_right = -3.99939
margin_bottom = 2.00024
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="Player_list"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0.0235294, 0.0235294, 0.823529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Player_list"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_list_container" type="VBoxContainer" parent="Player_list/ScrollContainer"]
margin_right = 640.0
size_flags_horizontal = 3

[connection signal="tree_entered" from="." to="." method="_on_Game_room_tree_entered"]
[connection signal="pressed" from="Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="Leave_button" to="." method="_on_Leave_button_pressed"]
